--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
   <display-name>PSI-WebApp</display-name>
+  	<filter-mapping>
+ 		<filter-name>jdbcFilter</filter-name>
+ 		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+ 		<filter-name>cookieFilter</filter-name>
+ 		<url-pattern>/*</url-pattern>
+	</filter-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
